<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_account" android:title="@string/action_account" />
        <item android:id="@+id/nav_tag" android:title="@string/action_tag" />
        <item android:id="@+id/nav_budget" android:title="@string/action_budget" />
        <item android:id="@+id/nav_statistic" android:title="@string/action_statistic" />
        <item android:id="@+id/nav_settings" android:title="@string/action_settings" />

        <!--
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />
        -->
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>