<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".account.AccountAddActivity"
    tools:showIn="@layout/activity_account_add">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_account_name"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/accountAdd_accountName"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountAdd_accountName"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/textView2"
        android:layout_marginStart="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:id="@+id/btnAccountAdd_save"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/accountAdd_accountName"
        android:layout_marginBottom="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        android:id="@+id/btnAccountAdd_cancel"
        android:layout_alignBottom="@+id/btnAccountAdd_save"
        android:layout_toStartOf="@+id/btnAccountAdd_save" />
</RelativeLayout>
